# Tool_For_AI

./: Dockerfile  Home.py  Main.py  README.md  auth.py  config.py  docker-compose.yml  pyproject.toml  schema.py  utils.py
.cfg/: mongo.yaml
pages/: Admin.py  Data_Acqusition.py
utils/: common.py  crawler.py  crawling.py  mongo.py  password.py
